# realestatehomeAgent

./: README.md  pyproject.toml
src/realestatepacketcrew_automation_project_setup_guide/: app.py  crew.py  main.py
src/realestatepacketcrew_automation_project_setup_guide/config/: agents.yaml  tasks.yaml
src/realestatepacketcrew_automation_project_setup_guide/db/: chroma.sqlite3
src/realestatepacketcrew_automation_project_setup_guide/templates/: index.html
