[project]
name = "realestatepacketcrew_automation_project_setup_guide"
version = "0.1.0"
description = "realestatepacketcrew_automation_project_setup_guide using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
realestatepacketcrew_automation_project_setup_guide = "realestatepacketcrew_automation_project_setup_guide.main:run"
run_crew = "realestatepacketcrew_automation_project_setup_guide.main:run"
train = "realestatepacketcrew_automation_project_setup_guide.main:train"
replay = "realestatepacketcrew_automation_project_setup_guide.main:replay"
test = "realestatepacketcrew_automation_project_setup_guide.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
